# qml_research

./: .gitignore  AGENTS.md  Dockerfile  README.md  SVM_Percobaan.ipynb  Silhouette_Score.ipynb  docker-compose.yml  environment.yml  pipeline.md  pyproject.toml  qsvm_single_file.py  repo_structure.txt  requirements-app.txt  requirements.txt  run_one_go_svm_qsvm_experiment.py  streamlit_app.py  svmkernel.ipynb
cluster heartdeses/: test.py
combined_outputs/deliverables/: artifact-build-manifest.json  build_qml_summary.py  qml_experiment_presentation.pptx  qml_experiment_report.docx  qml_experiment_report.md  ~$l_experiment_report.docx
combined_outputs/report/: iris_svm_grid_results.csv
configs/: default_experiment.json
docs/: experiment_report.md  experiment_report_svm.md  laporan_analisis_SVM.docx  web_app_architecture_and_evaluation.md  ~$poran_analisis_SVM.docx
infra/: README.md
outputs/metadata/: svm_error_analysis.json
outputs/tables/: svm_grid_results.csv
outputs_breast_cancer_gpu/metadata/: anova_summary.json  paired_model_comparison.json  qsvm_best_confirmed_model_info.json  qsvm_optuna_summary.json  qsvm_test_metrics.json  resource_summary.json  svm_test_metrics.json
outputs_breast_cancer_gpu/models/: qsvm_optuna_study.pkl
outputs_breast_cancer_gpu/reports/: compute_allocation_analysis.md  experiment_report.json  experiment_report.md  experiment_report.txt  resource_summary.md
results/: .gitkeep
sample_data/: iris_new_data.csv
scripts/: run_experiment.py  test_application.py
tests/: test_app_reporting.py  test_inference.py
(+454 files in other folders)
