[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsvm-vm-compare"
version = "0.1.0"
description = "Benchmark quantum kernel SVM versus traditional SVM in a VM-friendly research scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "psutil>=5.9,<6.0",
  "scikit-learn>=1.4",
  "pennylane>=0.45,<0.46",
  "pennylane-lightning-gpu>=0.45,<0.46; platform_system == 'Linux'",
  "cuquantum-cu12; platform_system == 'Linux'",
  "cuquantum-python-cu12; platform_system == 'Linux'",
  "custatevec-cu12; platform_system == 'Linux'",
]

[project.optional-dependencies]
app = [
  "pandas>=2.2",
  "joblib>=1.3",
  "streamlit>=1.36",
]
test = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
